// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewDataSourceRow check NewDataSourceRow 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="dataSourceId"
          >
            New DataSource ID
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="dataSourceId"
            name="dataSourceId"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA"
            >
              OPCUA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <button
          class="oi-add-button btn btn-primary btn-sm"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check add press 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="dataSourceId"
          >
            New DataSource ID
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="dataSourceId"
            name="dataSourceId"
            type="text"
            value="new_datasource"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA"
            >
              OPCUA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <button
          class="oi-add-button btn btn-primary btn-sm"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check add pressed with empty dataSource name 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="dataSourceId"
          >
            New DataSource ID
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="dataSourceId"
            name="dataSourceId"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA"
            >
              OPCUA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <button
          class="oi-add-button btn btn-primary btn-sm"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check change dataSourceId 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="dataSourceId"
          >
            New DataSource ID
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="dataSourceId"
            name="dataSourceId"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA"
            >
              OPCUA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <button
          class="oi-add-button btn btn-primary btn-sm"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check change protocol 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="dataSourceId"
          >
            New DataSource ID
          </label>
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="dataSourceId"
            name="dataSourceId"
            type="text"
            value="new_datasource"
          />
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA"
            >
              OPCUA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
      <div
        class="col-md-3"
      >
        <button
          class="oi-add-button btn btn-primary btn-sm"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
  </form>
</div>
`;
